# ld51

./: Cargo.toml  build.rs
assets/maps/: map1.ldtk
assets/sheets/: enemies.sheet.json  player.sheet.json
raw/spritesheets/: enemies.aseprite  player.aseprite
raw/tileset/: map-tiles.aseprite
src/: animation.rs  game.rs  main.rs  sheet_loader.rs  state.rs
